# rust-study-20220507

./: .gitignore  Cargo.toml
basics/examples/: list.rs
basics/src/: main.rs
play-trunk/: Cargo.toml
play-trunk/examples/: hello.rs  promise.rs
play-trunk/src/: main.rs
play-wasm/: Cargo.toml  run.ts
play-wasm-bare/: Cargo.toml  build.sh  run.ts
play-wasm-bare/src/: lib.rs
play-wasm/src/: lib.rs
