[package]
name = "play-trunk"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys = "0.3.57"
wasm-bindgen = "0.2.80"
wee_alloc = "0.4.5"
wasm-bindgen-futures = "0.4.30"

[dependencies.web-sys]
version = "0.3.57"
features = ["console", "Element", "Window", "Document", "MouseEvent", "HtmlElement"]
